# aicomm

./: README.md  ai.rest  cliff.toml
chat/: Cargo.toml  deny.toml  test.rest
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: ollama.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: ollama.rs
chat/chat_core/: Cargo.toml
chat/chat_core/src/: lib.rs
chat/chat_server/: Cargo.toml
chat/chat_server/fixtures/: test.sql
chat/chat_server/src/: agent.rs  error.rs  lib.rs
chat/chat_server/src/handlers/: agent.rs  auth.rs  chat.rs  messages.rs  workspace.rs
chat/chat_server/src/models/: agent.rs  chat.rs  messages.rs  user.rs
chat/chat_test/: Cargo.toml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20241118110449_agent_adapter.sql
chat/notify_server/: Cargo.toml
chatapp/: deny.toml
chatapp/src-tauri/: Cargo.toml  tauri.conf.json
swiftide-pgvector/: Cargo.toml  deny.toml
swiftide-pgvector/src/: persist.rs
