[package]
name = "swiftide-pgvector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
derive_builder = "0.20.2"
pgvector = { version = "0.4.0", features = ["sqlx"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "uuid"] }
swiftide-core = "0.14.3"
tracing = "0.1.40"


[dev-dependencies]
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
swiftide = { version = "0.14.3", features = [
    "tree-sitter",
    "ollama",
    "openai",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.41.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
